--- a/po/raspi-config.pot
+++ b/po/raspi-config.pot
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2012-09-10 19:07-0400\n"
+"POT-Creation-Date: 2012-09-11 23:05-0400\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -72,11 +72,7 @@ msgid "Current: %sMiB for ARM, %sMiB for VideoCore"
 msgstr ""
 
 #: raspi-config:167
-msgid "MiB for ARM, "
-msgstr ""
-
-#: raspi-config:167
-msgid "MiB for VideoCore"
+msgid "%sMiB for ARM, %sMiB for VideoCore"
 msgstr ""
 
 #: raspi-config:170
