--- a/po/hu.po
+++ b/po/hu.po
@@ -1,16 +1,18 @@
-# SOME DESCRIPTIVE TITLE.
-# Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
-# This file is distributed under the same license as the PACKAGE package.
-# FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
+# Hungarian translations for raspi-config package.
+# Magyar fordítás raspi-config csomagot.
+# Copyright (C) 2012 Alex Bradbury
+# This file is distributed under the same license as the raspi-config package.
+# Bendegúz Gyönki <gyonkibendeguz@gmail.com>, 2012.
 #
 msgid ""
 msgstr ""
-"Project-Id-Version: PACKAGE VERSION\n"
+"Project-Id-Version: 20120910\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2012-09-11 23:05-0400\n"
-"PO-Revision-Date: 2012-09-12 16:09+0100\n"
-"Last-Translator: gyeben <gyonkibendeguz@gmail.com>\n"
+"PO-Revision-Date: 2012-09-12 16:10+0100\n"
+"Last-Translator: Bendegúz Gyönki <gyonkibendeguz@gmail.com>\n"
 "Language-Team: \n"
+"Language: hu\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -62,8 +64,7 @@ msgstr "Engedélyezve"
 
 #: raspi-config:132
 msgid "You will now be asked to enter a new password for the pi user"
-msgstr ""
-"A rendszer meg fog kérni, hogy adj meg egy új jelszót a pi felhasználóhoz"
+msgstr "A rendszer meg fog kérni, hogy adj meg egy új jelszót a pi felhasználóhoz"
 
 #: raspi-config:134
 msgid "Password changed successfully"
@@ -123,8 +124,7 @@ msgstr "Nem"
 
 #: raspi-config:216
 msgid "To start raspi-config again, run 'sudo raspi-config'\\n"
-msgstr ""
-"A raspi-config ismételt futtatásához, futtasd ezt: 'sudo raspi-config'\\n"
+msgstr "A raspi-config ismételt futtatásához, futtasd ezt: 'sudo raspi-config'\\n"
 
 #: raspi-config:229
 msgid "Would you like to reboot now?"
@@ -181,9 +181,3 @@ msgstr "Ablakkezelő auto. megnyitása"
 #: raspi-config:250
 msgid "Try to upgrade raspi-config"
 msgstr "Raspi-config frissítése"
-
-#~ msgid "MiB for ARM, "
-#~ msgstr "MiB az ARM-nak, "
-
-#~ msgid "MiB for VideoCore"
-#~ msgstr "MiB a VideoCore-nak"
